log
Fri 12 Aug 2022 01:03:10 PM UTC: 
 tests:  0|7
total_score: 0/70
cd1db9d
Fri 12 Aug 2022 01:04:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f984400
Fri 12 Aug 2022 01:11:15 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘int’
   40 |   *suma = sumaN(int[a], int m);
      |                 ^~~
exercises.c:40:11: error: too few arguments to function ‘sumaN’
   40 |   *suma = sumaN(int[a], int m);
      |           ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
b60c349
Fri 12 Aug 2022 01:11:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘int’
   40 |   *suma = sumaN(int a[], int m);
      |                 ^~~
exercises.c:40:11: error: too few arguments to function ‘sumaN’
   40 |   *suma = sumaN(int a[], int m);
      |           ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
69ecef8
Fri 12 Aug 2022 01:11:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:9: error: expected expression before ‘int’
   40 |   sumaN(int a[], int m);
      |         ^~~
exercises.c:40:3: error: too few arguments to function ‘sumaN’
   40 |   sumaN(int a[], int m);
      |   ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
cf87455
Fri 12 Aug 2022 01:12:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
75f8356
Fri 12 Aug 2022 01:19:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 |   *suma = sumaN(n,m)
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:40:21: error: expected ‘;’ before ‘}’ token
   40 |   *suma = sumaN(n,m)
      |                     ^
      |                     ;
......
   43 | }
      | ~                    
cc1: all warnings being treated as errors
Compilation failed
035c0bf
Fri 12 Aug 2022 01:19:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 |   *suma = sumaN(n,m);
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3d4c483
Fri 12 Aug 2022 01:19:42 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: ‘n’ redeclared as different kind of symbol
   40 |   int n;
      |       ^
exercises.c:39:32: note: previous definition of ‘n’ was here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |                            ~~~~^
exercises.c:41:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   *suma = sumaN(n,m);
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
636c94c
Fri 12 Aug 2022 01:19:59 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   *suma = sumaN(b,m);
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:41:11: error: ‘b’ is used uninitialized in this function [-Werror=uninitialized]
   41 |   *suma = sumaN(b,m);
      |           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0207bfd
Fri 12 Aug 2022 01:20:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   *suma = sumaN(b,m);
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
1f69154
Fri 12 Aug 2022 01:20:27 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
0e675c9
Fri 12 Aug 2022 01:21:39 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:10: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   int* b=(n+m);
      |          ^
exercises.c:41:8: error: unused variable ‘b’ [-Werror=unused-variable]
   41 |   int* b=(n+m);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
170353e
Fri 12 Aug 2022 01:23:56 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: unused variable ‘b’ [-Werror=unused-variable]
   40 |   int*b=(a+m);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
2a75878
